--- a/store/src/main/resources/application.yml
+++ b/store/src/main/resources/application.yml
@@ -1,1 +1,13 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bookstore
+    username: postgres
+    password: 1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
+server:
+  port: 8080
