Application properties example

--- a/email-sender/src/main/resources/application.properties
+++ b/email-sender/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.mail.host=smtp.gmail.com
+spring.mail.username=<your email addres>
+spring.mail.password=<your password>
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=false
