--- a/basic-auth/src/main/resources/application.yml
+++ b/basic-auth/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: 1234
+    url: jdbc:postgresql://localhost:5432/security
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
